<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout">

    <ImageView
        android:id="@+id/imageView10"
        android:contentDescription="@string/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.95"
        app:srcCompat="@drawable/bg_white_c" />

    <ImageView
        android:id="@+id/imageView14"
        android:contentDescription="@string/barview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:srcCompat="@drawable/rectangle_9527" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Create_your_account"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/Create_account_for_exploring_news"
        android:textColor="#969AA8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="144dp"
        android:layout_height="114dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo_image"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/image_app_logo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/Expense_tracker_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="268dp"
        android:layout_height="205dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Expense_tracker_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/mobile_login_pana" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/Email_or_Phone_Number"
       android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        style="@style/InputStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="#F2EEEE"
        android:drawableStart="@drawable/image_shape"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/Email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintWidth_percent="0.85" />

    <Button
        android:id="@+id/button"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#D70404"
        android:fontFamily="@font/poppins_semibold"
        android:radius="180dp"
        android:text="@string/Continues"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="MissingPrefix" />

</androidx.constraintlayout.widget.ConstraintLayout>