<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:padding="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/hamburger_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nav_hamburger" />

    <TextView
        android:id="@+id/formTitle"
        style="@style/FormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/form_title"
        android:textColor="@color/design_default_color_primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/USD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formTitle" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/KHR"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toTopOf="@+id/radioButton" />

    <TextView
        android:id="@+id/category_Label"
        style="@style/LabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/category_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_Label"
        app:popupTheme="@style/SpinnerPopupStyle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/category_label"
        app:layout_constraintBottom_toBottomOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner2"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/notesLabel"
        style="@style/LabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="Remark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/notesInput"
        style="@style/InputStyle"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:hint="@string/remark_hint"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesLabel" />

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/design_default_color_primary_variant"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/add_expense_button"
        android:textAlignment="center"
        android:textAppearance="@style/FormTitle"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesInput" />

</androidx.constraintlayout.widget.ConstraintLayout>